import org.gradle.api.tasks.testing.logging.TestExceptionFormat

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.2'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'jacoco'
    id 'org.sonarqube' version '4.0.0.2929'
}

group = 'nz.ac.canterbury.team1000'
version = '0.0.2-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'com.h2database:h2'
    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
    implementation 'org.springframework.boot:spring-boot-starter-validation:3.2.4'
    // https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
    implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.3'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    //Cucumber dependencies
    testImplementation 'io.cucumber:cucumber-java:7.15.0'
    testImplementation 'io.cucumber:cucumber-spring:7.15.0'
    testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.15.0'
    testImplementation 'org.junit.platform:junit-platform-suite:1.10.2'

    implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'
}

jacocoTestReport {
    dependsOn test

    reports {
        xml.required = true
        xml.destination = file("$buildDir/jacoco/test-report.xml")
        csv.required = false
        html.destination = file("$buildDir/jacoco/html")
    }
}

sonar {
    properties {
        property "sonar.projectKey", "seng302-2024-team1000"
        property "sonar.projectName", "seng302-2024-teamX"
        property "sonar.sourceEncoding", "UTF-8"
        property "sonar.host.url", "https://sonarqube.csse.canterbury.ac.nz"
        property "sonar.login", "$System.env.SONARQUBE_TOKEN"
    }
}

// Code taken from ATDD workshop
tasks.register("cucumber", Test) {
    testLogging.showStandardStreams = true
    systemProperty "spring.config.additional-location", "classpath:/cucumber.properties"
    useJUnitPlatform()
    filter {
        // Ensure this lines up with the package your cucumber tests are located in
        includeTestsMatching "nz.ac.canterbury.team1000.gardenersgrove.cucumber.*"
    }
    testLogging {
        events "passed", "skipped", "failed", "standardOut", "standardError"
        exceptionFormat TestExceptionFormat.FULL
    }
}


tasks.named('test') {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

